--- a/example/res/layout/activity_example.xml
+++ b/example/res/layout/activity_example.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bundlerexample.ExampleActivity">
+    tools:context="com.example.bundler.ExampleActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
