--- a/example/res/layout/activity_main.xml
+++ b/example/res/layout/activity_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hendraanggrian.widget.RevealFrameLayout
-    android:id="@+id/revealFrameLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.hendraanggrian.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/revealFrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="192dp"
         android:layout_height="192dp"
@@ -17,14 +16,14 @@
         android:visibility="invisible"
         app:cardBackgroundColor="?colorAccent">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:navigationIcon="?homeAsUpIndicator">
 
-        </android.support.v7.widget.Toolbar>
-    </android.support.v7.widget.CardView>
+        </androidx.appcompat.widget.Toolbar>
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/button"
@@ -33,5 +32,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="32dp"
-        android:text="Tap me"/>
+        android:text="Tap me" />
 </com.hendraanggrian.widget.RevealFrameLayout>
