--- a/example/res/layout/activity_next.xml
+++ b/example/res/layout/activity_next.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hendraanggrian.widget.RevealFrameLayout
-    android:id="@+id/revealFrameLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.hendraanggrian.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/revealFrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,11 +9,11 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?colorAccent"/>
+        android:background="?colorAccent" />
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        app:navigationIcon="?homeAsUpIndicator"/>
+        app:navigationIcon="?homeAsUpIndicator" />
 </com.hendraanggrian.widget.RevealFrameLayout>
